Version 2.0 (unreleased)
- Assumes system has strdup and string.h.
- Fixed namespace violation for MAX_NAME_SIZE and MAX_ERROR_DESCRIPTION_SIZE.
  The new names are ASN1_MAX_NAME_SIZE and ASN1_MAX_ERROR_DESCRIPTION_SIZE.
- Optimized tree generation.
- Decoder can now decode BER encoded octet strings.
- API and ABI changes since last version:
  asn1_get_length_ber: New function
  struct node_asn_struct: New member, small_value.

Version 1.5 (released 2008-07-29)
- Update gnulib files.
- Fix memory leaks, from Christian Grothoff <christian@grothoff.org>.

Version 1.4 (released 2008-04-21)
- Update gnulib files.
- Replace uses of alloca with malloc.

Version 1.3 (released 2008-02-01)
- Handle 'INTEGER { ... } (a..b)' regression.
  Revert parts of earlier fix.  asn1Parser can now again parse src/pkix.asn1.
  The ASN1.c file was generated using Bison 2.3.
- Move examples from src/ to new directory examples/.
- Duplicate copy of divergated pkix.asn removed.
- Merge unnecessary lib/defines.h into lib/int.h.
- Configure no longer tries to use gcc -pipe.
- Update gnulib files.
- Fix mem leak in self-test.

Version 1.2 (released 2007-12-10)
- Update gnulib files.

Version 1.1 (released 2007-08-31)
- Fix bug that made asn1_check_version believe that 1.0 is older than 0.3.10.

Version 1.0 (released 2007-08-31)
- The self-tests, command line tools and build infrastructure have
  been re-licensed from GPLv2 to GPLv3.
- Doc fixes.
- Update gnulib files.

Version 0.3.10 (released 2007-05-25)
- Update gnulib files.

Version 0.3.9 (released 2007-03-02)
- In generated code, config.h is pulled in if HAVE_CONFIG_H.
- Development changes: changed from CVS to GIT as an experiment.
  I push my changes to <http://repo.or.cz/w/libtasn1.git>.
- Autoconf 2.61 and automake 1.10 is required.

Version 0.3.8 (released 2006-11-16)
- Fix reading of binary files in asn1Decoding, for Windows.

Version 0.3.7 (released 2006-10-19)
- When asn1_der_coding encoded a TYPE_NULL and the output buffer is