@@ -23,7 +23,7 @@ endif
 EXTRA_DIST = gdoc TODO libtasn1.html libtasn1.ps libtasn1.pdf
 
 info_TEXINFOS = libtasn1.texi
-libtasn1_TEXINFOS = fdl.texi gpl-3.0.texi lgpl-2.1.texi $(gdoc_TEXINFOS)
+libtasn1_TEXINFOS = fdl-1.3.texi gpl-3.0.texi lgpl-2.1.texi $(gdoc_TEXINFOS)
 
 AM_MAKEINFOFLAGS = -I $(top_builddir)/doc
 TEXI2DVI = texi2dvi $(AM_MAKEINFOFLAGS)
