@@ -21,7 +21,7 @@ Copyright @copyright{} 2001, 2002, 2003  Fabio Fiorina
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.2 or
+under the terms of the GNU Free Documentation License, Version 1.3 or
 any later version published by the Free Software Foundation; with no
 Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.  A
 copy of the license is included in the section entitled ``GNU Free
@@ -395,7 +395,7 @@ Options:
 
 @cindex FDL, GNU Free Documentation License
 
-@include fdl.texi
+@include fdl-1.3.texi
 
 @node GNU LGPL
 @appendixsec GNU Lesser General Public License
